// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > basicly works 1`] = `
<div
  class="Modal"
  style="display: none;"
>
  <div
    class="Modal__backdrop"
  />
  <div
    class="Modal__body"
  >
    <div
      class="test-modal-classname"
    >
      test modal content
    </div>
  </div>
</div>
`;

exports[`Modal > basicly works 2`] = `
<div
  class="Modal"
>
  <div
    class="Modal__backdrop"
  />
  <div
    class="Modal__body"
  >
    <div
      class="test-modal-classname"
    >
      test modal content
    </div>
  </div>
</div>
`;

exports[`Modal > props.backdrop > support \`"clickHide"\` 1`] = `
<div
  class="Modal"
  style="display: none;"
>
  <div
    class="Modal__backdrop"
  />
  <div
    class="Modal__body"
  />
</div>
`;

exports[`Modal > props.backdrop > support \`"static"\` 1`] = `
<div
  class="Modal"
  style="display: none;"
>
  <div
    class="Modal__backdrop"
  />
  <div
    class="Modal__body"
  />
</div>
`;

exports[`Modal > props.backdrop > support \`false\` 1`] = `
<div
  class="Modal"
  style="display: none;"
>
  <div
    class="Modal__body"
  />
</div>
`;

exports[`useModal > basicly works 1`] = `
<Modal2
  backdrop="clickHide"
  backdropClassName="Modal__backdrop"
  bodyClassName="Modal__body"
  documentElementClassName="Modal__html"
  documentElementClassNameWhenInvisible={null}
  documentElementClassNameWhenVisible="Modal__html--visible"
  onVisibleChange={[Function]}
  portalClassName="Modal"
  visible={true}
>
  <div>
    hello
  </div>
</Modal2>
`;

exports[`useModal > basicly works 2`] = `
<Modal2
  backdrop="clickHide"
  backdropClassName="Modal__backdrop"
  bodyClassName="Modal__body"
  documentElementClassName="Modal__html"
  documentElementClassNameWhenInvisible={null}
  documentElementClassNameWhenVisible="Modal__html--visible"
  onVisibleChange={[Function]}
  portalClassName="Modal"
  visible={false}
>
  <div>
    hello
  </div>
</Modal2>
`;

exports[`useModal > basicly works 3`] = `
<Modal2
  backdrop="clickHide"
  backdropClassName="Modal__backdrop"
  bodyClassName="Modal__body"
  documentElementClassName="Modal__html"
  documentElementClassNameWhenInvisible={null}
  documentElementClassNameWhenVisible="Modal__html--visible"
  onVisibleChange={[Function]}
  portalClassName="Modal"
  visible={true}
>
  <div>
    hello
  </div>
</Modal2>
`;
